--- a/packages/route_widget/components/options_panel/options_panel.scss
+++ b/packages/route_widget/components/options_panel/options_panel.scss
@@ -2,7 +2,7 @@
   position: absolute;
   z-index: 10;
   padding: 16px;
-  overflow: scroll;
+  overflow: auto;
   max-height: 100%;
   background-color: #fff;
   width: 100%;
