--- a/packages/route_widget/components/search/components/fromTo.scss
+++ b/packages/route_widget/components/search/components/fromTo.scss
@@ -90,7 +90,7 @@
         max-height: 300px;
         width: 100%;
         background-color: $white;
-        overflow-y: scroll;
+        overflow-y: auto;
         z-index: 401;
         border: 1px solid $black-300;
         box-shadow: 0px 3px 6px rgba(51, 51, 51, 0.1), 0px 10px 20px rgba(51, 51, 51, 0.15);
