--- a/packages/route_widget/components/search/search.scss
+++ b/packages/route_widget/components/search/search.scss
@@ -135,7 +135,7 @@
   }
 
   .search__results__list_container {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     flex: 1;
 
